--- a/CarRental/Areas/Admin/Views/Menus/Edit.cshtml
+++ b/CarRental/Areas/Admin/Views/Menus/Edit.cshtml
@@ -15,6 +15,7 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="MenuId" />
+                <input type="hidden" asp-for="Alias" />
                 <div class="form-group">
                     <label asp-for="Title" class="control-label"></label>
                     <input asp-for="Title" class="form-control" />
