--- a/CarRental/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CarRental/Areas/Admin/Views/Product/Edit.cshtml
@@ -49,15 +49,15 @@
                                 <input type="hidden" asp-for="CarId" />
                                 <div class="form-group">
                                     <label asp-for="CarName">Tên xe</label>
-                                    <input asp-for="CarName" type="text" class="form-control" id="basicInput"
+                                    <input asp-for="CarName" class="form-control" id="basicInput"
                                           >
                                     <span asp-validation-for="CarName" class="text-danger"></span>
 
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Type">Dòng xe</label>
-                                    <select asp-items="ViewBag.carType" class="form-select" id="basicSelect">
-                                        <option selected></option>
+                                    <label asp-for="TypeId">Dòng xe</label>
+                                    <select asp-for="TypeId" asp-items="ViewBag.carType" class="form-select" id="basicSelect">
+                                        <option value="0" selected></option>
                                     </select>
 
                                     <span asp-validation-for="Type" class="text-danger"></span>
@@ -65,8 +65,8 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="LicensePlate">Biển số</label>
-                                    <input asp-for="LicensePlate" type="text" class="form-control" id="basicInput"
-                                           placeholder="Nhập biển số xe">
+                                    <input asp-for="LicensePlate"  class="form-control" id="basicInput"
+                                           >
                                     <span asp-validation-for="LicensePlate" class="text-danger"></span>
 
                                 </div>
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="btn-group mb-3">
                                     <div class="form-group">
-                                        <input type="submit" value="Create" class="btn btn-primary" />
+                                        <input type="submit" value="Lưu" class="btn btn-primary" />
                                     </div>|
                                     <div class="form-group">
                                         <a asp-action="Index" class="btn btn-danger">Quay lại</a>
