--- a/CarRental/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CarRental/Areas/Admin/Views/Product/Edit.cshtml
@@ -146,12 +146,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="IsActive" class="control-label">
-                                        @Html.CheckBox("IsActive", false)
+                                        @Html.CheckBox("IsActive")
                                         Hiển thị
                                     </label>
 
                                     <span asp-validation-for="IsActive" class="text-danger"></span>
                                 </div>
+                               
                                 <div class="btn-group mb-3">
                                     <div class="form-group">
                                         <input type="submit" value="Lưu" class="btn btn-primary" />
