--- a/CarRental/Views/Product/Details.cshtml
+++ b/CarRental/Views/Product/Details.cshtml
@@ -107,19 +107,22 @@
                         <span>SKU: 12345</span>
                     </div>
                     <p class="desc-content mb-5">I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</p>
-                    <div class="quantity-with_btn mb-5">
-                        <div class="quantity">
-                            <div class="cart-plus-minus">
-                                <input class="cart-plus-minus-box" value="0" type="text">
-                                <div class="dec qtybutton">-</div>
-                                <div class="inc qtybutton">+</div>
+                    <form asp-action="AddToCart" asp-controller="Cart" asp-route-id="@Model.CarId">
+                        <div class="quantity-with_btn mb-5">
+                            <div class="quantity">
+                                <div class="cart-plus-minus">
+                                    <input class="cart-plus-minus-box" value="1" type="text" name="quantity">
+                                    <div class="dec qtybutton">-</div>
+                                    <div class="inc qtybutton">+</div>
+                                </div>
+                            </div>
+                            <div class="add-to_cart">
+                                <button asp-action="AddToCart" asp-controller="Cart" asp-route-id="@Model.CarId" class="btn product-cart button-icon flosun-button dark-btn">Add to cart</button>
+                                <a class="btn flosun-button secondary-btn secondary-border rounded-0" href="wishlist.html">Add to wishlist</a>
                             </div>
                         </div>
-                        <div class="add-to_cart">
-                            <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@Model.CarId" class="btn product-cart button-icon flosun-button dark-btn" href="cart.html">Add to cart</a>
-                            <a class="btn flosun-button secondary-btn secondary-border rounded-0" href="wishlist.html">Add to wishlist</a>
-                        </div>
-                    </div>
+
+                    </form>
                     <div class="social-share mb-4">
                         <span>Share :</span>
                         <a href="#"><i class="fa fa-facebook-square facebook-color"></i></a>
