--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -547,6 +547,7 @@
                                    showConfirmButton: false,
                                    timer: 1500
                                  });
+                                 appendNewCart();
                       },
                        error: function() {
                                    Swal.fire({
@@ -559,5 +560,6 @@
                  });
              });
         });
+        
     </script>
 }
